package com.codigo.strategy.strategy;

public interface PaymentStrategy {
    void pay(double amount);
}
